--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Dmitry Svobodiannikov <svobodiannikov@gmail.com>"]
 python = "^3.9"
 Django = "^3.2.4"
 djangorestframework = "^3.12.4"
+django-cors-headers = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.13.0"
