--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,6 @@ repos:
     rev: 3.9.2
     hooks:
     -   id: flake8
-        exclude: ^migrations/|settings.py
+        exclude: migrations/|settings.py
         args: ["--max-line-length=90"]
 
