--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^3.2.4"
 djangorestframework = "^3.12.4"
 django-cors-headers = "^3.7.0"
+python-telegram-bot = "^13.6"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.13.0"
